fixed ubercart text on mobile

--- a/space.css
+++ b/space.css
@@ -233,5 +233,8 @@
     h1 {
       font-size: 5em;
     }
+    #uc {
+      font-size: 3.5em;
+    }
 
   }
